# Prueba

./: .gitignore  README.md
build-tp_poo-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: qtcsettings.cmake
tp_poo/: CMakeLists.txt  jjiji.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  recursos.qrc
tp_poo/LectordeArchivos/: lectorarchivos.cpp  lectorarchivos.h
tp_poo/PantallaInicioUI/: pantallainicioui.cpp  pantallainicioui.h  pantallainicioui.ui
tp_poo/PersonajeUI/: personajeui.cpp  personajeui.h
tp_poo/Recursos/Archivos/: diplomatico.txt  duracion.txt  duracion_fake.txt  estado_civil.txt  estado_civil_fake.txt  fecha_nacimiento.txt  fecha_nacimiento_fake.txt  imagenes-personajes.txt  nacionalidad.txt  nacionalidad_fake.txt  nivel1.txt  proposito.txt  proposito_fake.txt  refugiado.txt  reglas.txt  residencia.txt  residencia_fake.txt  revolucionario_aleatorio.txt  tipo_visita.txt  tipo_visita_fake.txt
tp_poo/Recursos/Imagenes/: imagenes-personajes.txt
tp_poo/niveles/: nivel1.cpp  nivel1.h  nivel1.ui  nivel2.cpp  nivel2.h  nivel2.ui  nivelabs.cpp  nivelabs.h
tp_poo/pantallaJuego/: game.cpp  game.ui  pantallajuego.cpp  pantallajuego.h  pantallajuego.ui
tp_poo/personajes/: aldeano.cpp  aldeano.h  crearPersonajeAleatorio.cpp  diplomatico.cpp  diplomatico.h  personajeabst.cpp  personajeabst.h  refugiadopolitico.cpp  refugiadopolitico.h  revolucionario.cpp  revolucionario.h
